--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:icon="@mipmap/recipes_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.RecipesApp"
+        android:theme="@style/Base.Theme.RecipesApp"
         tools:targetApi="31">
         <activity
             android:name=".activities.SplashActivity"
